# sardine.beta-api

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: config.py  database.py  main.py
app/core/: audit.py  avatar.py  email.py  enums.py  exceptions.py  filters.py  membership.py  pagination.py  security.py  users_lookup.py  validators.py
app/features/agents/: models.py  router.py  schemas.py  service.py
app/features/api_keys/: models.py  router.py  schemas.py  service.py
app/features/audit/: models.py  router.py  schemas.py  service.py
app/features/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
app/features/classifiers/: router.py  service.py
app/features/datasets/: models.py  router.py  schemas.py  service.py
app/features/files/: comments.py  models.py  router.py  schemas.py  service.py  tags.py  tags_router.py
app/features/flows/: execution_router.py  execution_service.py  models.py  router.py  schemas.py  service.py
app/features/flows/engine/: __init__.py  context.py  engine.py  expressions.py
app/features/folders/: models.py  router.py  schemas.py  service.py
app/features/notifications/: models.py  router.py  schemas.py  service.py  ws_manager.py
app/features/organizations/: models.py  router.py  schemas.py  service.py
app/features/permissions/: models.py  router.py  schemas.py  service.py
app/features/search/: router.py  service.py
app/features/teams/: models.py  router.py  schemas.py  service.py
app/features/users/: router.py  schemas.py  service.py
(+19 files in other folders)
