[project]
name = "sardine-beta-api"
version = "0.1.0"
description = "Sardine Beta API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34",
    "motor>=3.6,<3.7",
    "beanie>=1.27,<2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.18",
    "Pillow>=11.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
